started HTML and created img file

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,21 @@
     <link rel="stylesheet" href="scss/main.scss" />
   </head>
   <body>
-    <h1>Hello world</h1>
-
+    <header>
+      <h1>Ango-<br />lino</h1>
+    </header>
+    <nav><a>Noi</a><a>Menu</a><a>Evento</a><a>Contato</a></nav>
+    <main>
+      <article>
+        <figure><img src="../src/img/cafebar-img.webp" /></figure>
+        <h2>Noi…</h2>
+        <p>
+          Angelino est un café familiale fondé par mon grand père en 1951, en
+          main familiale depuis ses débuts, il est le lieu de rencontre des
+          matinaux, à la recherche d’un petit déjeuner goûteux & régressif.
+        </p>
+      </article>
+    </main>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
