bootstrap grid practically installed

--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,91 @@
   </head>
   <body>
     <header>
-      <h1>Ango-<br />lino</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-2 offset-1 col-lg-2 offset-lg-3">Ango-<br />lino</div>
+        </div>
+      </div>
     </header>
-    <nav><a>Noi</a><a>Menu</a><a>Evento</a><a>Contato</a></nav>
+    <nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <a>Noi</a><a>Menu</a><a>Evento</a><a>Contato</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <main>
-      <article>
-        <figure><img src="../src/img/cafebar-img.webp" /></figure>
-        <h2>Noi…</h2>
-        <p>
-          Angelino est un café familiale fondé par mon grand père en 1951, en
-          main familiale depuis ses débuts, il est le lieu de rencontre des
-          matinaux, à la recherche d’un petit déjeuner goûteux & régressif.
-        </p>
-      </article>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-8">image</div>
+          <div class="col-12 col-lg-4">
+            <h2>Noi…</h2>
+            <p>
+              Angelino est un café familiale fondé par mon grand père en 1951,
+              en main familiale depuis ses débuts, il est le lieu de rencontre
+              des matinaux, à la recherche d’un petit déjeuner goûteux &
+              régressif.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <a>image</a>
+            image
+            <a>image</a>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2>Menu</h2>
+            <ul>
+              <li>Cornetto</li>
+              <li>Carot cake</li>
+              <li>Panacotta</li>
+              <li>Cantucci</li>
+              <li>Spremuta d'arancia</li>
+              <li>Capuccino</li>
+              <li>Espresso</li>
+              <li>Risretto</li>
+              <li>Latte machiatto</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="col-12">image</div>
+            <h2>Evento</h2>
+            <p>
+              Les habitués connaissent certainement notre petite bibliothèque et
+              ses bons vieux livres. C’est pourquoi nous avons décidé
+              d’organiser un café littéraire tous les samedi matin.
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2>Contatto</h2>
+            image
+            <p>Ilangelino@gmail.com</p>
+          </div>
+        </div>
+        <div class="col-2 offset-2 offset-lg-11">
+          <h2>indirizzo</h2>
+          <p>Via Romana 33</p>
+      </div>
+    </footer>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
