indentation et suppression des classes inutiles

--- a/src/index.html
+++ b/src/index.html
@@ -8,89 +8,89 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <div class="row">
-          <div class="col-2 offset-1 col-lg-2 offset-lg-3">Ango-<br />lino</div>
-        </div>
-      </div>
+      <div class="header-background"></div>
+      <h1>
+        <img
+          class="angolino-logo"
+          src="img/angolino-logo.webp"
+          alt="logo du café angolino"
+        />
+      </h1>
     </header>
-    <nav>
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <a>Noi</a><a>Menu</a><a>Evento</a><a>Contato</a>
-          </div>
-        </div>
-      </div>
-    </nav>
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-12 col-lg-8">image</div>
-          <div class="col-12 col-lg-4">
-            <h2>Noi…</h2>
-            <p>
+          <div class="col-12">
+            <nav><a>Noi</a><a>Menu</a><a>Evento</a><a>Contato</a></nav>
+          </div>
+        </div>
+      </div>
+      <div class="row g-0">
+        <div class="col-12 col-lg-8 order-lg-2">
+          <img src="/src/img/cafebar-img.webp" alt="" />
+        </div>
+        <div class="col-12 col-lg-4">
+          <article class="noi">
+            <h2>Noi</h2>
+            <div class="history">
               Angelino est un café familiale fondé par mon grand père en 1951,
               en main familiale depuis ses débuts, il est le lieu de rencontre
               des matinaux, à la recherche d’un petit déjeuner goûteux &
               régressif.
-            </p>
+            </div>
+          </article>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="menu-carousel">
+            <img src="../src/img/arrowleft-img.webp" />
+            <img src="../src/img/carrotcake-img.webp" />
+            <img src="../src/img/arrowright-img.webp" />
           </div>
         </div>
       </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <a>image</a>
-            image
-            <a>image</a>
-          </div>
+      <div class="row">
+        <div class="col-12">
+          <h2>Menu</h2>
+          <ul>
+            <li>Cornetto</li>
+            <li>Carot cake</li>
+            <li>Panacotta</li>
+            <li>Cantucci</li>
+            <li>Spremuta d'arancia</li>
+            <li>Capuccino</li>
+            <li>Espresso</li>
+            <li>Risretto</li>
+            <li>Latte machiatto</li>
+          </ul>
         </div>
       </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h2>Menu</h2>
-            <ul>
-              <li>Cornetto</li>
-              <li>Carot cake</li>
-              <li>Panacotta</li>
-              <li>Cantucci</li>
-              <li>Spremuta d'arancia</li>
-              <li>Capuccino</li>
-              <li>Espresso</li>
-              <li>Risretto</li>
-              <li>Latte machiatto</li>
-            </ul>
+      <div class="row">
+        <div class="col-12">
+          <div class="evento-background">
+            <div class="col-12"></div>
           </div>
         </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div class="col-12">image</div>
-            <h2>Evento</h2>
-            <p>
-              Les habitués connaissent certainement notre petite bibliothèque et
-              ses bons vieux livres. C’est pourquoi nous avons décidé
-              d’organiser un café littéraire tous les samedi matin.
-            </p>
-          </div>
-        </div>
+        <h2>Evento</h2>
+        <p>
+          Les habitués connaissent certainement notre petite bibliothèque et ses
+          bons vieux livres. C’est pourquoi nous avons décidé d’organiser un
+          café littéraire tous les samedi matin.
+        </p>
       </div>
     </main>
     <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h2>Contatto</h2>
-            image
-            <p>Ilangelino@gmail.com</p>
-          </div>
+      <div class="row">
+        <div class="col-12">
+          <h2>Contatto</h2>
+          image
+          <p>Ilangelino@gmail.com</p>
         </div>
-        <div class="col-2 offset-2 offset-lg-11">
-          <h2>indirizzo</h2>
-          <p>Via Romana 33</p>
+      </div>
+      <div class="offset-4 offset-lg-11">
+        <h2>indirizzo</h2>
+        <p>Via Romana 33</p>
       </div>
     </footer>
     <script src="js/main.js" type="module"></script>
