--- a/src/index.html
+++ b/src/index.html
@@ -21,76 +21,106 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <nav><a>Noi</a><a>Menu</a><a>Evento</a><a>Contato</a></nav>
+            <nav>
+              <a href="#noi">Noi</a><a href="#menu">Menu</a
+              ><a href="#evento">Evento</a><a href="#contato">Contato</a>
+            </nav>
           </div>
         </div>
       </div>
-      <div class="row g-0">
-        <div class="col-12 col-lg-8 order-lg-2">
-          <img src="/src/img/cafebar-img.webp" alt="" />
+      <div class="container">
+        <div class="row g-0">
+          <div class="col-12 col-lg-8 order-lg-2">
+            <img src="/src/img/cafebar-img.webp" alt="" />
+          </div>
+          <div class="col-12 col-lg-4">
+            <article class="noi">
+              <h2 id="noi">Noi</h2>
+              <div class="history">
+                Angelino est un café familiale fondé par mon grand père en 1951,
+                en main familiale depuis ses débuts, il est le lieu de rencontre
+                des matinaux, à la recherche d’un petit déjeuner goûteux &
+                régressif.
+              </div>
+            </article>
+          </div>
         </div>
-        <div class="col-12 col-lg-4">
-          <article class="noi">
-            <h2>Noi</h2>
-            <div class="history">
-              Angelino est un café familiale fondé par mon grand père en 1951,
-              en main familiale depuis ses débuts, il est le lieu de rencontre
-              des matinaux, à la recherche d’un petit déjeuner goûteux &
-              régressif.
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="menu-carousel">
+              <img class="arrow" src="../src/img/arrowleft-img.webp" />
+              <img
+                class="cake"
+                src="../src/img/carrotcake-img.webp"
+                alt="cake"
+              />
+              <img class="arrow" src="../src/img/arrowright-img.webp" />
             </div>
-          </article>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12">
-          <div class="menu-carousel">
-            <img src="../src/img/arrowleft-img.webp" />
-            <img src="../src/img/carrotcake-img.webp" />
-            <img src="../src/img/arrowright-img.webp" />
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-12">
-          <h2>Menu</h2>
-          <ul>
-            <li>Cornetto</li>
-            <li>Carot cake</li>
-            <li>Panacotta</li>
-            <li>Cantucci</li>
-            <li>Spremuta d'arancia</li>
-            <li>Capuccino</li>
-            <li>Espresso</li>
-            <li>Risretto</li>
-            <li>Latte machiatto</li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12">
-          <div class="evento-background">
-            <div class="col-12"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="menu">
+              <h2 id="menu">Menu</h2>
+              <ul>
+                <li>Cornetto</li>
+                <li>Carot cake</li>
+                <li>Panacotta</li>
+                <li>Cantucci</li>
+                <li>Spremuta d'arancia</li>
+                <li>Capuccino</li>
+                <li>Espresso</li>
+                <li>Risretto</li>
+                <li>Latte machiatto</li>
+              </ul>
+            </div>
           </div>
         </div>
-        <h2>Evento</h2>
-        <p>
-          Les habitués connaissent certainement notre petite bibliothèque et ses
-          bons vieux livres. C’est pourquoi nous avons décidé d’organiser un
-          café littéraire tous les samedi matin.
-        </p>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="col-12">
+              <div class="evento">
+                <div class="evento-background">
+                  <div class="evento-block">
+                    <h2 id="evento">Evento</h2>
+                    <p>
+                      Les habitués connaissent certainement notre petite
+                      bibliothèque et ses bons vieux livres. <br />C’est
+                      pourquoi nous avons décidé d’organiser un café littéraire
+                      tous les samedi matin.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <footer>
-      <div class="row">
-        <div class="col-12">
-          <h2>Contatto</h2>
-          image
-          <p>Ilangelino@gmail.com</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2 id="contato" class="contato">Contato</h2>
+            <a href="https://www.instagram.com/" target="_blank"
+              ><img
+                class="instagram-logo"
+                alt="instagram logo"
+                src="img/instagram-logo.webp"
+            /></a>
+            <p class="mail">Ilangelino@gmail.com</p>
+          </div>
         </div>
-      </div>
-      <div class="offset-4 offset-lg-11">
-        <h2>indirizzo</h2>
-        <p>Via Romana 33</p>
+        <div class="offset-4 offset-lg-11">
+          <h2>indirizzo</h2>
+          <p>Via Romana 33</p>
+        </div>
       </div>
     </footer>
     <script src="js/main.js" type="module"></script>
