deadline (je continue chez moi)

--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,17 @@
                 <li>Risretto</li>
                 <li>Latte machiatto</li>
               </ul>
+              <div class="menu-carousel-lg">
+                <div class="order-2">
+                  <img class="arrow" src="../src/img/arrowleft-img.webp" />
+                  <img
+                    class="cake"
+                    src="../src/img/carrotcake-img.webp"
+                    alt="cake"
+                  />
+                  <img class="arrow" src="../src/img/arrowright-img.webp" />
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -117,9 +128,9 @@
             <p class="mail">Ilangelino@gmail.com</p>
           </div>
         </div>
-        <div class="offset-4 offset-lg-11">
-          <h2>indirizzo</h2>
-          <p>Via Romana 33</p>
+        <div class="offset-4 offset-lg-10">
+          <h2 class="indirizzo">indirizzo</h2>
+          <p class="indirizzo">Via Romana 33</p>
         </div>
       </div>
     </footer>
