tentative de terminer le code…

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       <div class="container">
         <div class="row g-0">
           <div class="col-12 col-lg-8 order-lg-2">
-            <img src="/src/img/cafebar-img.webp" alt="" />
+            <img src="/src/img/cafebar-img.webp" alt="café bar" />
           </div>
           <div class="col-12 col-lg-4">
             <article class="noi">
@@ -65,6 +65,17 @@
         <div class="row">
           <div class="col-12">
             <div class="menu">
+              <div class="menu-carousel-lg">
+                <div class="col-lg-8 order-lg-2"">
+                  <img class="arrow" src="../src/img/arrowleft-img.webp" />
+                  <img
+                    class="cake"
+                    src="../src/img/carrotcake-img.webp"
+                    alt="cake"
+                  />
+                  <img class="arrow" src="../src/img/arrowright-img.webp" />
+                </div>
+              </div>
               <h2 id="menu">Menu</h2>
               <ul>
                 <li>Cornetto</li>
@@ -77,24 +88,12 @@
                 <li>Risretto</li>
                 <li>Latte machiatto</li>
               </ul>
-              <div class="menu-carousel-lg">
-                <div class="order-2">
-                  <img class="arrow" src="../src/img/arrowleft-img.webp" />
-                  <img
-                    class="cake"
-                    src="../src/img/carrotcake-img.webp"
-                    alt="cake"
-                  />
-                  <img class="arrow" src="../src/img/arrowright-img.webp" />
-                </div>
-              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-12">
             <div class="col-12">
               <div class="evento">
                 <div class="evento-background">
@@ -106,7 +105,6 @@
                       pourquoi nous avons décidé d’organiser un café littéraire
                       tous les samedi matin.
                     </p>
-                  </div>
                 </div>
               </div>
             </div>
@@ -134,6 +132,7 @@
         </div>
       </div>
     </footer>
-    <script src="js/main.js" type="module"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+		<script src="js/main.js"></script>
   </body>
 </html>
