j'aurais tenté de terminer…

--- a/src/index.html
+++ b/src/index.html
@@ -50,13 +50,21 @@
         <div class="row">
           <div class="col-12">
             <div class="menu-carousel">
-              <img class="arrow" src="../src/img/arrowleft-img.webp" />
+              <img
+                class="arrow"
+                src="../src/img/arrowleft-img.webp"
+                alt="arrow left"
+              />
               <img
                 class="cake"
                 src="../src/img/carrotcake-img.webp"
                 alt="cake"
               />
-              <img class="arrow" src="../src/img/arrowright-img.webp" />
+              <img
+                class="arrow"
+                src="../src/img/arrowright-img.webp"
+                alt="arrow right"
+              />
             </div>
           </div>
         </div>
@@ -66,14 +74,22 @@
           <div class="col-12">
             <div class="menu">
               <div class="menu-carousel-lg">
-                <div class="col-lg-8 order-lg-2"">
-                  <img class="arrow" src="../src/img/arrowleft-img.webp" />
+                <div class="col-lg-8 order-lg-2">
+                  <img
+                    class="arrow"
+                    src="../src/img/arrowleft-img.webp"
+                    alt="arrow left"
+                  />
                   <img
                     class="cake"
                     src="../src/img/carrotcake-img.webp"
                     alt="cake"
                   />
-                  <img class="arrow" src="../src/img/arrowright-img.webp" />
+                  <img
+                    class="arrow"
+                    src="../src/img/arrowright-img.webp"
+                    alt="arrow right"
+                  />
                 </div>
               </div>
               <h2 id="menu">Menu</h2>
@@ -94,17 +110,17 @@
       </div>
       <div class="container">
         <div class="row">
-            <div class="col-12">
-              <div class="evento">
-                <div class="evento-background">
-                  <div class="evento-block">
-                    <h2 id="evento">Evento</h2>
-                    <p>
-                      Les habitués connaissent certainement notre petite
-                      bibliothèque et ses bons vieux livres. <br />C’est
-                      pourquoi nous avons décidé d’organiser un café littéraire
-                      tous les samedi matin.
-                    </p>
+          <div class="col-12">
+            <div class="evento">
+              <div class="evento-background">
+                <div class="evento-block">
+                  <h2 id="evento">Evento</h2>
+                  <p>
+                    Les habitués connaissent certainement notre petite
+                    bibliothèque et ses bons vieux livres. <br />C’est pourquoi
+                    nous avons décidé d’organiser un café littéraire tous les
+                    samedi matin.
+                  </p>
                 </div>
               </div>
             </div>
@@ -117,12 +133,13 @@
         <div class="row">
           <div class="col-12">
             <h2 id="contato" class="contato">Contato</h2>
-            <a href="https://www.instagram.com/" target="_blank"
-              ><img
+            <a href="https://www.instagram.com/" target="_blank">
+              <img
                 class="instagram-logo"
                 alt="instagram logo"
                 src="img/instagram-logo.webp"
-            /></a>
+              />
+            </a>
             <p class="mail">Ilangelino@gmail.com</p>
           </div>
         </div>
@@ -132,7 +149,5 @@
         </div>
       </div>
     </footer>
-    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-		<script src="js/main.js"></script>
   </body>
 </html>
