changement des liens non directs

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       <div class="container">
         <div class="row g-0">
           <div class="col-12 col-lg-8 order-lg-2">
-            <img src="/src/img/cafebar-img.webp" alt="café bar" />
+            <img src="img/cafebar-img.webp" alt="café bar" />
           </div>
           <div class="col-12 col-lg-4">
             <article class="noi">
@@ -52,17 +52,13 @@
             <div class="menu-carousel">
               <img
                 class="arrow"
-                src="../src/img/arrowleft-img.webp"
+                src="img/arrowleft-img.webp"
                 alt="arrow left"
               />
-              <img
-                class="cake"
-                src="../src/img/carrotcake-img.webp"
-                alt="cake"
-              />
+              <img class="cake" src="img/carrotcake-img.webp" alt="cake" />
               <img
                 class="arrow"
-                src="../src/img/arrowright-img.webp"
+                src="img/arrowright-img.webp"
                 alt="arrow right"
               />
             </div>
@@ -77,17 +73,13 @@
                 <div class="col-lg-8 order-lg-2">
                   <img
                     class="arrow"
-                    src="../src/img/arrowleft-img.webp"
+                    src="img/arrowleft-img.webp"
                     alt="arrow left"
                   />
-                  <img
-                    class="cake"
-                    src="../src/img/carrotcake-img.webp"
-                    alt="cake"
-                  />
+                  <img class="cake" src="img/carrotcake-img.webp" alt="cake" />
                   <img
                     class="arrow"
-                    src="../src/img/arrowright-img.webp"
+                    src="img/arrowright-img.webp"
                     alt="arrow right"
                   />
                 </div>
